--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,3 +3,22 @@ main:
     url: "http://vocab.linkeddata.es/datosabiertos/"
   - title: "GitHub OpenCity"
     url: "https://github.com/opencitydata/"
+
+docs:
+  - title: Getting Started
+    children:
+      - title: "Quick-Start Guide"
+        url: /docs/quick-start-guide/
+      - title: "Structure"
+        url: /docs/structure/
+      - title: "Installation"
+        url: /docs/installation/
+      - title: "Upgrading"
+        url: /docs/upgrading/
+
+  - title: Customization
+    children:
+      - title: "Configuration"
+        url: /docs/configuration/
+      - title: "Navigation"
+        url: /docs/navigation/
