--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,20 +5,159 @@ main:
     url: "https://github.com/opencitydata/"
 
 docs:
-  - title: Terminados
+  - title: Vocabularios Terminados
     children:
       - title: "CONTRATACIÓN PÚBLICA"
         url: /#id1
-      - title: "Structure"
-        url: /docs/structure/
-      - title: "Installation"
-        url: /docs/installation/
-      - title: "Upgrading"
-        url: /docs/upgrading/
+      - title: "EMISIONES"
+        url: /#id2
+      - title: "EMPLEO"
+        url: /#id3
+      - title: "AUTOBÚS"
+        url: /#id4
+      - title: "SUBVENCIONES Y AYUDAS"
+        url: /#id5
+      - title: "DIRECCIÓN POSTAL"
+        url: /#id6
+      - title: "TERRITORIO"
+        url: /#id7
+      - title: "ORGANISMOS"
+        url: /#id8
+      - title: "SERVICIO"
+        url: /#id9
+      - title: "ACCESIBILIDAD"
+        url: /#id11
+      - title: "TRANSPORTE PÚBLICO TARJETA"
+        url: /#id12
+      - title: "TRÁFICO TIEMPO REAL"
+        url: /#id13       
 
-  - title: Inexistentes
+  - title: Vocabularios sin crear
     children:
-      - title: "Configuration"
-        url: /docs/configuration/
-      - title: "Navigation"
-        url: /docs/navigation/
+      - title: ""
+        url: /#id10
+      - title: ""
+        url: /#id14
+       - title: ""
+        url: /#id15
+      - title: ""
+        url: /#id16
+      - title: ""
+        url: /#id17
+      - title: ""
+        url: /#id18
+       - title: ""
+        url: /#id19
+      - title: ""
+        url: /#id20     
+      - title: ""
+        url: /#id21
+      - title: ""
+        url: /#id22    
+      - title: ""
+        url: /#id23
+      - title: ""
+        url: /#id24
+       - title: ""
+        url: /#id25
+      - title: ""
+        url: /#id26
+      - title: ""
+        url: /#id27
+      - title: ""
+        url: /#id28
+       - title: ""
+        url: /#id29
+      - title: ""
+        url: /#id30     
+      - title: ""
+        url: /#id31
+      - title: ""
+        url: /#id32       
+      - title: ""
+        url: /#id33
+      - title: ""
+        url: /#id34
+       - title: ""
+        url: /#id35
+      - title: ""
+        url: /#id36
+      - title: ""
+        url: /#id37
+      - title: ""
+        url: /#id38
+       - title: ""
+        url: /#id39
+      - title: ""
+        url: /#id40     
+      - title: ""
+        url: /#id41
+      - title: ""
+        url: /#id42          
+      - title: ""
+        url: /#id43
+      - title: ""
+        url: /#id44
+       - title: ""
+        url: /#id45
+      - title: ""
+        url: /#id46
+      - title: ""
+        url: /#id47
+      - title: ""
+        url: /#id48
+       - title: ""
+        url: /#id49
+       - title: ""
+        url: /#id499      
+      - title: ""
+        url: /#id50     
+      - title: ""
+        url: /#id51
+      - title: ""
+        url: /#id52            
+      - title: ""
+        url: /#id53
+      - title: ""
+        url: /#id54
+       - title: ""
+        url: /#id55
+      - title: ""
+        url: /#id56
+      - title: ""
+        url: /#id57
+      - title: ""
+        url: /#id58
+       - title: ""
+        url: /#id59
+       - title: ""
+        url: /#id60      
+      - title: ""
+        url: /#id61     
+      - title: ""
+        url: /#id62
+      - title: ""
+        url: /#id63     
+      - title: ""
+        url: /#id64
+       - title: ""
+        url: /#id65      
+      - title: ""
+        url: /#id66     
+      - title: ""
+        url: /#id67
+      - title: ""
+        url: /#id68   
+      - title: ""
+        url: /#id69
+      - title: ""
+        url: /#id70           
+        
+        
+        
+        
+        
+        
+        
+        
+        
