--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -34,123 +34,123 @@ docs:
 
   - title: Vocabularios sin crear
     children:
-      - title: ""
+      - title: "PARTICIPACIÓN CIUDADANA"
         url: /#id10
-      - title: ""
+      - title: "PROTECCIÓN CIVIL"
         url: /#id14
-       - title: ""
+       - title: "SEMÁFOROS"
         url: /#id15
-      - title: ""
+      - title: "ZONAS MASCOTAS"
         url: /#id16
-      - title: ""
+      - title: "SEÑALIZACIÓN VERTICAL"
         url: /#id17
-      - title: ""
+      - title: "SISTEMA ARBITRAL DE CONSUMO"
         url: /#id18
-       - title: ""
+       - title: "INSPECCIÓN TECNICA DE EDIFICIOS"
         url: /#id19
-      - title: ""
+      - title: "VIVIENDAS DE PROTECCIÓN PÚBLICA"
         url: /#id20     
-      - title: ""
+      - title: "ALQUILER DE VIVIENDAS PÚBLICAS"
         url: /#id21
-      - title: ""
+      - title: "SECCIONES CENSALES, DISTRITOS Y BARRIOS"
         url: /#id22    
-      - title: ""
+      - title: "OBRAS DE CONSERVACIÓN Y DE INFRAESTRUCTURAS"
         url: /#id23
-      - title: ""
+      - title: "LICENCIAS DE TERRAZAS"
         url: /#id24
-       - title: ""
+       - title: "ACTUACIONES URBANISTICAS"
         url: /#id25
-      - title: ""
+      - title: "OFICINAS DE TURISMO O PUNTOS DE INFORMACIÓN"
         url: /#id26
-      - title: ""
+      - title: "RESTRICCIONES A LA CIRCULACIÓN"
         url: /#id27
-      - title: ""
+      - title: "PARQUES DE VEHÍCULOS"
         url: /#id28
-       - title: ""
+       - title: "ESTACIONES COMBUSTIBLE"
         url: /#id29
-      - title: ""
+      - title: "SEÑALIZACIÓN HORIZONTAL"
         url: /#id30     
-      - title: ""
+      - title: "TRANSPORTE URBANO"
         url: /#id31
-      - title: ""
+      - title: "APARCAMIENTO ZONAS REGULADAS"
         url: /#id32       
-      - title: ""
+      - title: "ACCIDENTALIDAD TRÁFICO"
         url: /#id33
-      - title: ""
+      - title: "ZONAS COLECTIVOS"
         url: /#id34
-       - title: ""
+       - title: "SERVICIOS COLECTIVOS"
         url: /#id35
-      - title: ""
+      - title: "QUIOSCOS"
         url: /#id36
-      - title: ""
+      - title: "ACTOS"
         url: /#id37
-      - title: ""
+      - title: "CENTROS SERVICIOS SOCIALES"
         url: /#id38
-       - title: ""
+       - title: "ATENCIÓN SOCIAL"
         url: /#id39
-      - title: ""
+      - title: "ALBERGUES CENTROS NOCHE"
         url: /#id40     
-      - title: ""
+      - title: "CONTROL SEMÁFOROS"
         url: /#id41
-      - title: ""
+      - title: "URGENCIAS"
         url: /#id42          
-      - title: ""
+      - title: "BOMBEROS"
         url: /#id43
-      - title: ""
+      - title: "PARTICIPACIÓN CIUDADANA"
         url: /#id44
-       - title: ""
+       - title: "PUESTOS DE TRABAJO"
         url: /#id45
-      - title: ""
+      - title: "NORMATIVA MUNICIPAL"
         url: /#id46
-      - title: ""
+      - title: "DECLARACIONES COMPATIBLES"
         url: /#id47
-      - title: ""
+      - title: "ENCOMIENDAS DE GESTIÓN"
         url: /#id48
-       - title: ""
+       - title: "ARRENDAMIENTOS ALQUILERES"
         url: /#id49
-       - title: ""
+       - title: "RUTAS ITINERARIOS"
         url: /#id499      
-      - title: ""
+      - title: "PLAGAS y TRATAMIENTOS"
         url: /#id50     
-      - title: ""
+      - title: "CENTROS SANITARIOS"
         url: /#id51
-      - title: ""
+      - title: "PROTECCIÓN ANIMAL"
         url: /#id52            
-      - title: ""
+      - title: "ÁREAS VERDES"
         url: /#id53
-      - title: ""
+      - title: "NIVELES POLÍNICOS"
         url: /#id54
-       - title: ""
+       - title: "CLIMATOLOGÍA"
         url: /#id55
-      - title: ""
+      - title: "ARBOLADO"
         url: /#id56
-      - title: ""
+      - title: "REGISTROS"
         url: /#id57
-      - title: ""
+      - title: "POLIGONOS INDUSTRIALES"
         url: /#id58
-       - title: ""
+       - title: "IMPUESTOS PERSONAS JURÍDICAS"
         url: /#id59
-       - title: ""
+       - title: "IMPUESTOS"
         url: /#id60      
-      - title: ""
+      - title: "ACTIVIDAD INSPECTORA"
         url: /#id61     
-      - title: ""
+      - title: "CONSUMO"
         url: /#id62
-      - title: ""
+      - title: "SALAS DE OCIO"
         url: /#id63     
-      - title: ""
+      - title: "MUSEOS, GALERÍAS Y EXPOSICIONES"
         url: /#id64
-       - title: ""
+       - title: "BIENES INMUEBLES"
         url: /#id65      
-      - title: ""
+      - title: "BIBLIOTECAS: PRESTAMOS"
         url: /#id66     
-      - title: ""
+      - title: "BIBLIOTECAS: CATÁLOGO DE LIBROS"
         url: /#id67
-      - title: ""
+      - title: "BIBLIOTECAS"
         url: /#id68   
-      - title: ""
+      - title: "MERCADILLOS"
         url: /#id69
-      - title: ""
+      - title: "CATÁLOGO DE EMPRESAS"
         url: /#id70           
         
         
