--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,30 @@ main:
     url: "https://github.com/opencitydata/"
 
 docs:
+ - title: Getting Started
+    children:
+      - title: "Quick-Start Guide"
+        url: /docs/quick-start-guide/
+      - title: "Structure"
+        url: /docs/structure/
+      - title: "Installation"
+        url: /docs/installation/
+      - title: "Upgrading"
+        url: /docs/upgrading/
+
+  - title: Customization
+    children:
+      - title: "Configuration"
+        url: /docs/configuration/
+      - title: "Navigation"
+        url: /docs/navigation/
+      - title: "UI Text"
+        url: /docs/ui-text/
+      - title: "Authors"
+        url: /docs/authors/
+      - title: "Layouts"
+        url: /docs/layouts/
+
   - title: Vocabularios Terminados
     children:
       - title: "CONTRATACIÓN PÚBLICA"
@@ -31,8 +55,8 @@ docs:
         url: /#id12
       - title: "TRÁFICO TIEMPO REAL"
         url: /#id13  
-        
-  - title: Vocabularios sin crear
+
+  - title: Customization
     children:
       - title: "PARTICIPACIÓN CIUDADANA"
         url: /#id10
