--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -58,6 +58,8 @@ docs:
 
   - title: Customization
     children:
+      - title: "PARTICIPACIÓN CIUDADANA"
+        url: /#id10
       - title: "PROTECCIÓN CIVIL"
         url: /#id14
 
