--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -32,7 +32,7 @@ docs:
       - title: "TRÁFICO TIEMPO REAL"
         url: /#id13
 
-  - title: Customization
+  - title: Vocabularios sin crear
     children:
       - title: "PARTICIPACIÓN CIUDADANA"
         url: /#id10
