--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 remote_theme: "mmistakes/minimal-mistakes@4.22.0"
 #remote_theme: minimal-mistakes-jekyll
-title: VocabulariosFEMP
+title: Vocabularios OpenData
 layout: single
 plugins:
   - jekyll-include-cache  
